Alteração no iframe
Iframe alterado para fazer adicao de outro endereço no caso um fictio.

--- a/1º Projeto/index.html
+++ b/1º Projeto/index.html
@@ -179,7 +179,7 @@
             <h2>Fale conosco ou nos faça uma visita.</h2>
             <div class="container-local">
                 <img class="img-local" src="img/world_connection__flatline.png" alt="Global">
-                <iframe class="iframe-local" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3862.2278663832053!2d-49.162658985160554!3d-14.528954589848087!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTTCsDMxJzQ0LjIiUyA0OcKwMDknMzcuNyJX!5e0!3m2!1sen!2sbr!4v1588607904583!5m2!1sen!2sbr" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe class="iframe-local" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15929602.765864901!2d92.43681726315894!3d12.903659262276182!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304d8df747424db1%3A0x9ed72c880757e802!2sTail%C3%A2ndia!5e0!3m2!1spt-BR!2sbr!4v1588627430798!5m2!1spt-BR!2sbr" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 <ul class="lista-local">
                     <h2>Contatos</h2>
                     <li>Telefone</li>
