--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -15,7 +15,10 @@
             <div class="container">
                 <div class="logo"> < Projet_CoD > </div>
                 <div class="redes-socias">
-                    
+                    <a href="#"> <img src="img/facebook-f-brands.svg" alt="" srcset=""> </a>
+                    <a href="#"> <img src="img/linkedin-in-brands.svg" alt=""> </a>
+                    <a href="#"> <img src="img/twitter-brands.svg" alt="" srcset=""> </a>
+                    <a href="#"> <img src="img/wifi-solid.svg" alt="" srcset=""> </a>
                 </div>
             </div>
         </header>
