Alteração meta tag
Exclusão de uma das palavras chaves para pesquisas nos motores de busca

--- a/1º Projeto/index.html
+++ b/1º Projeto/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="author" content="Projt_CoD">
         <meta name="description" content="Site Supreme para contratação de serviços de segurança do trabalho, eletricos e outros...">
-        <meta name="keywords" content="Supreme, supreme, engenharia, segurança, trabalho, elétrico, projetos, Uruaçu">
+        <meta name="keywords" content="Supreme, supreme, engenharia, segurança, trabalho, elétrico, projetos">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="img/logo_mobile.png" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,500;1,500&display=swap" rel="stylesheet">
