Add div de navegação

--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -7,6 +7,8 @@
         <meta name="keywords" content="conteudo do site">
         <meta name="description" content="descrição do site">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Geo:ital@1&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
     </head>
 
@@ -22,5 +24,20 @@
                 </div>
             </div>
         </header>
+        <div class="navegacao">
+            <div class="container">
+                <nav class="menu-pc">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Service</a></li>
+                        <li><a href="#">Pages</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
+                <input class="pesquisa" type="search" name="" id="">
+            </div>
+        </div>
     </body>
 </html>
