--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -36,7 +36,7 @@
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </nav>
-                <input class="pesquisa" type="search" name="" id="">
+                <input placeholder="Faça uma busca aqui!" class="pesquisa" type="search" name="" id="">
             </div>
         </div>
     </body>
