--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -29,14 +29,14 @@
                 <nav class="menu-pc">
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Service</a></li>
-                        <li><a href="#">Pages</a></li>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Serviços</a></li>
+                        <li><a href="#">Paginas</a></li>
                         <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Contato</a></li>
                     </ul>
                 </nav>
-                <input placeholder="Faça uma busca aqui!" class="pesquisa" type="search" name="" id="">
+                <input placeholder="Pesquise algo!" class="pesquisa" type="search" name="" id="">
             </div>
         </div>
     </body>
