Add de JS externo
para fazer o slider

--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -7,6 +7,7 @@
         <meta name="keywords" content="conteudo do site">
         <meta name="description" content="descrição do site">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Geo:ital@1&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
@@ -39,5 +40,13 @@
                 <input placeholder="Pesquise algo!" class="pesquisa" type="search" name="" id="">
             </div>
         </div>
+
+        <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>    
+        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.9.0rc1.js"></script>
+        <script src="http://code.jquery.com/jquery-migrate-1.0.0rc1.js"></script>
     </body>
 </html>
