Inicialização do slider via js externo

--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -41,12 +41,20 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-        <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>    
-        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <section>
+            <div class="slider">
+                <img src="img/banner1.jpg" alt="">
+                <img src="img/banner2.jpg" alt="">
+            </div>
+        </section>
 
-        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>    
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <script src="js/function.js"></script>
+
+        <!--<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
         <script src="http://code.jquery.com/jquery-1.9.0rc1.js"></script>
-        <script src="http://code.jquery.com/jquery-migrate-1.0.0rc1.js"></script>
+        <script src="http://code.jquery.com/jquery-migrate-1.0.0rc1.js"></script>-->
     </body>
 </html>
