Inicio da formatação do slider
preparando itens para icones do font awesome

--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -7,6 +7,7 @@
         <meta name="keywords" content="conteudo do site">
         <meta name="description" content="descrição do site">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
         <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Geo:ital@1&display=swap" rel="stylesheet">
@@ -38,16 +39,18 @@
                     </ul>
                 </nav>
                 <input placeholder="Pesquise algo!" class="pesquisa" type="search" name="" id="">
+                <i class="fa fa-search-minus" aria-hidden="true"></i>
             </div>
         </div>
 
-        <section>
+        <section class="sessao-apresenta">
             <div class="slider">
                 <img src="img/banner1.jpg" alt="">
                 <img src="img/banner2.jpg" alt="">
             </div>
         </section>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script> <!--Font awesome-->>
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>    
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
