--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -19,10 +19,14 @@
             <div class="container">
                 <div class="logo"> < Projet_CoD > </div>
                 <div class="redes-socias">
-                    <a href="#"> <img src="img/facebook-f-brands.svg" alt="" srcset=""> </a>
+                    <a href="#"><i class="fab fa-facebook-f fa-lg"></i></a>
+                    <a href="#"><i class="fas fa-wifi fa-lg"></i></a>
+                    <a href="#"><i class="fab fa-twitter fa-lg"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in fa-lg"></i></a>
+                    <!--<a href="#"> <img src="img/facebook-f-brands.svg" alt="" srcset=""> </a>
                     <a href="#"> <img src="img/linkedin-in-brands.svg" alt=""> </a>
                     <a href="#"> <img src="img/twitter-brands.svg" alt="" srcset=""> </a>
-                    <a href="#"> <img src="img/wifi-solid.svg" alt="" srcset=""> </a>
+                    <a href="#"> <img src="img/wifi-solid.svg" alt="" srcset=""> </a>-->
                 </div>
             </div>
         </header>
@@ -39,7 +43,7 @@
                     </ul>
                 </nav>
                 <input placeholder="Pesquise algo!" class="pesquisa" type="search" name="" id="">
-                <i class="fa fa-search-minus" aria-hidden="true"></i>
+                <!--<i class="fa fa-search" aria-hidden="true"></i>-->
             </div>
         </div>
 
@@ -50,7 +54,7 @@
             </div>
         </section>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script> <!--Font awesome-->>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script> <!--Font awesome-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>    
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
