Estilização dos buttons "next" e "prev"

--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -49,8 +49,10 @@
 
         <section class="sessao-apresenta">
             <div class="slider">
-                <img src="img/banner1.jpg" alt="">
-                <img src="img/banner2.jpg" alt="">
+                <!--<img src="img/banner1.jpg" alt="">
+                <img src="img/banner2.jpg" alt="">-->
+                <div class="img1 img-cfg"></div>
+                <div class="img2 img-cfg"></div>
             </div>
         </section>
 
