Add sessão destaque

--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -56,6 +56,30 @@
             </div>
         </section>
 
+        <section class="destaque">
+            <div class="texto-dest">
+                <h1>Lorem ipsum <strong> dolor sit amet </strong>consectetur</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque unde labore eligendi, facere libero a accusamus, corporis cum commodi cumque necessitatibus rem, quis ipsa dolore odit officia vero ipsam? Itaque.</p>
+            </div>
+            <div class="img-dest-mon">
+                <div class="img-child">
+                    <div class="img-ind-dest"></div>
+                    <h2>Lorem</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
+                </div>
+                <div class="img-child">
+                    <div class="img-ind-dest"></div>
+                    <h2>Lorem</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
+                </div>
+                <div class="img-child">
+                    <div class="img-ind-dest"></div>
+                    <h2>Lorem</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
+                </div>
+            </div>
+        </section>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script> <!--Font awesome-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>    
