Sessão de fotos em andamento

--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -80,6 +80,46 @@
             </div>
         </section>
 
+        <section class="fotos">
+            <div class="container foto-mom">
+                <div class="foto-cont">
+                    <div class="foto-ind"></div>
+                    <h2>Lorem Ipsun</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis fuga provident unde.</p>
+                </div>
+
+                <div class="foto-cont">
+                    <div class="foto-ind"></div>
+                    <h2>Lorem Ipsun</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis fuga provident unde.</p>
+                </div>
+
+                <div class="foto-cont">
+                    <div class="foto-ind"></div>
+                    <h2>Lorem Ipsun</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis fuga provident unde.</p>
+                </div>
+
+                <div class="foto-cont">
+                    <div class="foto-ind"></div>
+                    <h2>Lorem Ipsun</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis fuga provident unde.</p>
+                </div>
+
+                <div class="foto-cont">
+                    <div class="foto-ind"></div>
+                    <h2>Lorem Ipsun</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis fuga provident unde.</p>
+                </div>
+
+                <div class="foto-cont">
+                    <div class="foto-ind"></div>
+                    <h2>Lorem Ipsun</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis fuga provident unde.</p>
+                </div>
+            </div>
+        </section>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script> <!--Font awesome-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>    
