Ajuste do icone de pesquisa

--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -42,8 +42,10 @@
                         <li><a href="#">Contato</a></li>
                     </ul>
                 </nav>
-                <input placeholder="Pesquise algo!" class="pesquisa" type="search" name="" id="">
-                <!--<i class="fa fa-search" aria-hidden="true"></i>-->
+                <div class="input-pesquisa">
+                    <input placeholder="Pesquise algo!" class="pesquisa" type="search" name="" id="">
+                    <a  class="lupa" href="#"><i class="fas fa-search"></i></a>
+                </div>
             </div>
         </div>
 
