Sessão de propagandas/patrocinios

--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -122,6 +122,13 @@
             </div>
         </section>
 
+        <section class="logos-patricionio">
+            <img src="img/logo1.png" alt="dribbbble" srcset="">
+            <img src="img/logo2.png" alt="leopards" srcset="">
+            <img src="img/logo3.png" alt="behance" srcset="">
+            <img src="img/logo4.png" alt="puma" srcset="">
+        </section>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script> <!--Font awesome-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>    
