--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -129,6 +129,35 @@
             <img src="img/logo4.png" alt="puma" srcset="">
         </section>
 
+        <footer class="footer1">
+            <div class="ft-txt1">
+                <h2>Nossos Horáios</h2>
+                <p>
+                    Funcionamento em dias utéis da semana.
+                </p>
+                <p>07:30h às 18h</p>
+                <p>
+                    Funcionemanto aos finais de semana.
+                </p>
+                <p>08h às 12h</p>
+            </div>
+            <div class="ft-txt2">
+                <h2>Tags</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, praesentium. Assumenda officiis exercitationem eius at nesciunt repellendus incidunt sed vero, aut placeat dolorum qui iste aspernatur veniam! Consectetur, nulla similique!</p>
+            </div>
+            <div class="ft-txt3">
+                <h2>Um pouco sobre nós</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur sint nemo, expedita provident maxime, cupiditate nihil eaque distinctio architecto eligendi itaque sapiente perferendis quo molestias? Dolor officia tenetur in ipsum!</p>
+            </div>
+            <div class="ft-txt4">
+                <h2>Nos de um toque!</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <p>Cidade</p>
+                <p>Email</p>
+                <p>Telefone</p>
+            </div>
+        </footer>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script> <!--Font awesome-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>    
