Add foorter final
Agora resta apenas alguns ajustes de respnsividade.

--- a/2º Projeto/index.html
+++ b/2º Projeto/index.html
@@ -15,7 +15,7 @@
     </head>
 
     <body>
-        <header>
+        <header id="topo">
             <div class="container">
                 <div class="logo"> < Projet_CoD > </div>
                 <div class="redes-socias">
@@ -157,6 +157,17 @@
                 <p>Telefone</p>
             </div>
         </footer>
+
+        <div class="footer2">
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <div class="icons-footer redes-socias">
+                <a href="#"><i class="fab fa-facebook-f fa-lg"></i></a>
+                    <a href="#"><i class="fas fa-wifi fa-lg"></i></a>
+                    <a href="#"><i class="fab fa-twitter fa-lg"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in fa-lg"></i></a>
+            </div>
+            <a id="seta-cima" title="Voltar ao topo" href="#topo"><i class="far fa-arrow-alt-circle-up fa-2x"></i></a>
+        </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script> <!--Font awesome-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
