--- a/3º Projeto/index.html
+++ b/3º Projeto/index.html
@@ -41,7 +41,7 @@
         </section>
 
         <footer>
-            <p>Os resultados obtidos aqui não devem substituir uma consulta médica!</p>
+            <p>Os resultados obtidos aqui <b>NÃO</b> devem substituir uma consulta médica!</p>
         </footer>
 
         <script src="js/functions.js"></script>
