--- a/3º Projeto/index.html
+++ b/3º Projeto/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <title>Calcule seu IMC</title>
+        <meta charset="utf-8">
         <meta name="author" content="Jhom">
         <meta name="keywords" content="imc, calculo, corporal,peso,altura">
         <meta name="description" content="Site para calculo de IMC">
