--- a/4º Projeto/index.html
+++ b/4º Projeto/index.html
@@ -7,6 +7,8 @@
         <meta name="keywords" content="mobile, first, site, html, css">
         <meta name="description" content="Site feito com html e css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
@@ -23,34 +25,34 @@
         <header>
             <h1>Lorem</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque error maiores velit, molestiae tenetur natus modi, omnis reiciendis, facere quas incidunt repudiandae tempore officiis.</p>
-            <a href="#">Ver mais</a>
+            <a class="btn" href="#">Ver mais</a>
         </header>
 
         <section id="sobre">
             <h2>Sobre</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe necessitatibus, consectetur iste incidunt similique eligendi numquam unde repellat libero deleniti optio ipsam </p>
-            <a href="#contato">Entre em contato</a>
+            <a class="btn" href="#contato">Entre em contato</a>
         </section>
 
         <section id="servicos">
             <h2>Serviços</h2>
             <div>
-                <img src="" alt="Serviços">
+                <img src="img/manutencao.png" alt="Serviços">
                 <h3>Lorem</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga eum iste alias.</p>
             </div>
             <div>
-                <img src="" alt="Hospedagem">
+                <img src="img/nuvem.png" alt="Hospedagem">
                 <h3>Lorem</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga eum iste alias.</p>
             </div>
             <div>
-                <img src="" alt="Armazenamento">
+                <img src="img/caixa.png" alt="Armazenamento">
                 <h3>Lorem</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga eum iste alias.</p>
             </div>
             <div>
-                <img src="" alt="Feito com amor">
+                <img src="img/coracao.png" alt="Feito com amor">
                 <h3>Lorem</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga eum iste alias.</p>
             </div>
@@ -58,24 +60,12 @@
 
         <section id="portifolio">
             <h2>Portifolio</h2>
-            <div>
-                <img src="" alt="imagem">
-            </div>
-            <div>
-                <img src="" alt="imagem">
-            </div>
-            <div>
-                <img src="" alt="imagem">
-            </div>
-            <div>
-                <img src="" alt="imagem">
-            </div>
-            <div>
-                <img src="" alt="imagem">
-            </div>
-            <div>
-                <img src="" alt="imagem">
-            </div>
+            <img src="" alt="imagem">
+            <img src="" alt="imagem">
+            <img src="" alt="imagem">
+            <img src="" alt="imagem">
+            <img src="" alt="imagem">
+            <img src="" alt="imagem">
         </section>
 
         <section id="contato">
