Add endereço imgs

--- a/4º Projeto/index.html
+++ b/4º Projeto/index.html
@@ -60,23 +60,23 @@
 
         <section id="portifolio">
             <h2>Portifolio</h2>
-            <img src="" alt="imagem">
-            <img src="" alt="imagem">
-            <img src="" alt="imagem">
-            <img src="" alt="imagem">
-            <img src="" alt="imagem">
-            <img src="" alt="imagem">
+            <img src="img/imagem2.png" alt="imagem">
+            <img src="img/imagem3.png" alt="imagem">
+            <img src="img/imagem2.png" alt="imagem">
+            <img src="img/imagem3.png" alt="imagem">
+            <img src="img/imagem2.png" alt="imagem">
+            <img src="img/imagem3.png" alt="imagem">
         </section>
 
         <section id="contato">
             <h2>Contato</h2>
             <p>Entre em contato conosco</p>
             <div>
-                <img src="" alt="telefone">
+                <img src="img/telefone.png" alt="telefone">
                 <a href="tel:40028922">40028922</a>
             </div>
             <div>
-                <img src="" alt="email">
+                <img src="img/o-email.png" alt="email">
                 <a href="mailto:email@exemplo.com">email@exemplo.com</a>
             </div>
             <!--<a href="tel:40028922">(11) 4002-8922</a>-->
