Add chamada para arquivos js

--- a/1º Projeto/index.html
+++ b/1º Projeto/index.html
@@ -204,5 +204,8 @@
         <div class="desenvolvido">
             <p>Desenvolvido por &copy;Projet_CoD - 2020</p>
         </div>
+
+        <script src="js/jquery.js"></script>
+        <script src="js/functions.js"></script>
     </body>
 </html>
